# qusi_roman_simulated_microlensing

./: .gitignore  pyproject.toml
scripts/: slurm_single_node_run.sh  train.py
src/qusi_roman_simulated_microlensing/: dataset.py  download_and_extract_dataset.py
